# rust_call_ifttt_webhook_api

./: Cargo.toml  README.md  conf.json
src/: main.rs
