[package]
name = "rust_call_ifttt_webhook_api"
version = "0.1.0"
authors = ["mkXultra <electrincgoat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json","blocking"] }